<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ジャバボタン</string>
    <string name="action_settings">設定</string>
	<string name="action_share">Share</string>
	<string name="action_mic">音声認識</string>
	<string name="java_message">ジャバ</string>
    <string name="settings_title">設定</string>
    <string name="dl_free_java">無料Javaのダウンロード</string>
    <string name="javayou_downloadtoday">あなたとJAVA,\n 今すぐダウンロー\nド</string>

	<string name="pref_counters_title">カウンタ情報</string>
	<string name="pref_counter_press">ボタン押下回数</string>
	<string name="pref_counter_shake">振った回数</string>
	<string name="pref_counter_dj">スクラッチ回数</string>
	<string name="pref_counter_voice">音声認識回数</string>
    <string name="pref_shakeJava_title">振れ振れジャバジャバ</string>
    <string name="pref_djJava_title">DJジャバ</string>
    <string name="pref_shakeJava_min_title">第1ジャバ加速度</string>
    <string name="pref_shakeJava_min_summ">最も低い音でジャバする加速度</string>
    <string name="pref_shakeJava_max_title">第2ジャバ加速度</string>
    <string name="pref_shakeJava_max_summ">最も高い音でジャバする加速度</string>
	<string name="pref_shakeJava_modulation_enable_title">振る速度に応じてジャバを変調</string>
	<string name="pref_shakeJava_modulation_enable_summ">ジャバ音の高さを振る早さに応じて変更する</string>
	<string name="pref_djJava_min_title">第1ジャバ速度</string>
    <string name="pref_djJava_min_summ">最も低い音でジャバする速度</string>
    <string name="pref_djJava_max_title">第2ジャバ速度</string>
    <string name="pref_djJava_max_summ">最も高い音でジャバする速度</string>
	<string name="pref_etc_title">その他</string>
	<string name="pref_lucky_title">射幸心を煽る</string>
	<string name="pref_lucky_summ">たまにジャバ以外のことをしゃべる</string>
</resources>
