<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	<PreferenceCategory
		android:title="@string/pref_counters_title">
		<Preference
			android:title="@string/pref_counter_press"
			android:key="PressCounter" />
		<Preference
			android:title="@string/pref_counter_dj"
			android:key="DJJavaCounter" />
		<Preference
			android:title="@string/pref_counter_shake"
			android:key="ShakeCounter" />
		<Preference
			android:title="@string/pref_counter_voice"
			android:key="VoiceCounter" />
	</PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/pref_shakeJava_title"
        android:key="pref_shakeJava_settings">
		<CheckBoxPreference
			android:key="pref_shakeJava_modulation_enable"
			android:title="@string/pref_shakeJava_modulation_enable_title"
			android:summary="@string/pref_shakeJava_modulation_enable_summ"
			android:defaultValue="true" />
        <EditTextPreference
            android:key="pref_shakeJava_min"
            android:title="@string/pref_shakeJava_min_title"
            android:summary="@string/pref_shakeJava_min_summ"
            android:defaultValue="600"
            android:inputType="number" />
        <EditTextPreference
            android:key="pref_shakeJava_max"
            android:title="@string/pref_shakeJava_max_title"
            android:summary="@string/pref_shakeJava_max_summ"
            android:defaultValue="1000"
            android:inputType="number" />
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/pref_djJava_title"
        android:key="pref_djJava_settings">
        <EditTextPreference
            android:key="pref_djJava_min"
            android:title="@string/pref_djJava_min_title"
            android:summary="@string/pref_djJava_min_summ"
            android:defaultValue="2000"
            android:inputType="number" />
        <EditTextPreference
            android:key="pref_shakeJava_max"
            android:title="@string/pref_djJava_max_title"
            android:summary="@string/pref_djJava_max_summ"
            android:defaultValue="5000"
            android:inputType="number" />
    </PreferenceCategory>
	<PreferenceCategory
		android:title="@string/pref_etc_title"
		android:key="pref_etc_settings">
		<CheckBoxPreference
		 	android:key="pref_lucky_enable"
		 	android:title="@string/pref_lucky_title"
		 	android:summary="@string/pref_lucky_summ"
		 	android:defaultValue="false" />
	</PreferenceCategory>
</PreferenceScreen>
